--- a/модуль 05/food/package.json
+++ b/модуль 05/food/package.json
@@ -9,6 +9,8 @@
    "license": "ISC",
    "description": "",
    "devDependencies": {
-      "json-server": "^1.0.0-beta.3"
+      "json-server": "^1.0.0-beta.3",
+      "webpack": "^5.98.0",
+      "webpack-cli": "^6.0.1"
    }
 }
